--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "start":"node server.js"
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "^4.5.0",
-    "express":"*",
-    "body-parser":"*"
+    "body-parser": "*",
+    "express": "*",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
